Trying to fix aws error - "Unable to import module 'ec2-vol-management'"
aws zip file name and python file name must match except the extension

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for ansible-role-ec2-volume-management
 iam_role_name: "volume-management-iam-role"
-lambda_function_name: "ec2-vol-management"
+lambda_function_name: "ec2_vol_management"
 lambda_runtime: python2.7
 # Default run daily
 lambda_scheduled_rule_expression: 'cron(0 1 * * ? *)'
