--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,14 +20,9 @@
     state: directory
   register: tempfile
 
-- name: Template the python script file
-  template:
-    src: "{{ lambda_function_name }}.py"
-    dest: "{{ tempfile.path }}/{{ lambda_function_name }}.py"
-
 - name: Create zip file
   archive:
-    path: "{{ tempfile.path }}/{{ lambda_function_name }}.py"
+    path: "{{ role_path }}/files/{{ lambda_function_name }}.py"
     dest: "{{ tempfile.path }}/{{ lambda_function_name }}.zip"
     format: zip
 
@@ -49,6 +44,7 @@
     aws_lambda_schedule_rule_name: "{{ lambda_function_name }}-cloudwatch-rule"
     aws_lambda_schedule_rule_description: "Run {{ lambda_function_name }}"
     aws_lambda_schedule_rule_expression: '{{ lambda_scheduled_rule_expression }}'
+    aws_lambda_environment: "{{ lambda_environment }}"
 
 - name: Cleanup tempfile
   file:
